--- a/src/app/components/intro/_IntroSplash.scss
+++ b/src/app/components/intro/_IntroSplash.scss
@@ -94,9 +94,6 @@
     }
 
     button {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
       min-height: 180px;
       width: 180px;
       padding: 30px 30px 20px;
